auto-test/tests/chapter_14/invalid_types/extra_credit/prefix_incr_not_lvalue.c


int main(void) {
    int i = 10;
    int *ptr = &++i;
    return 0;
}